--- a/style.css
+++ b/style.css
@@ -143,6 +143,8 @@ label[title] {
         .toggle-details-btn:hover { text-decoration: underline; }
 
         .footer-disclaimer { text-align: center; margin-top: 1rem; color: var(--tekst-grijs); font-size: 0.85rem; }
+        .footer-disclaimer1 { text-align: center; margin-top: -0.5rem; color: var(--tekst-grijs); font-size: 0.85rem; }
+
         
         .action-container { margin-top: 1.5rem; text-align: center; }
         .info-link { color: var(--wur-blauw); text-decoration: none; font-weight: 600; font-size: 0.95rem; cursor: pointer;}
